# Personal-project

2.Device_tree/: bcm2711-rpi-4-b.dts  ex1.dtb  ex1.dts  ex2.dtb  ex2.dts
3.Device_driver/: README.md
3.Device_driver/3.1.helloworld/: Makefile
3.Device_driver/3.1.helloworld/3.1.1.Allocate_major_minor/: README.md
3.Device_driver/3.1.helloworld/3.1.2.Device_file/: README.md
3.Device_driver/3.1.helloworld/3.1.3.File_operations/: README.md
3.Device_driver/3.1.helloworld/src/: helloworld.c
3.Device_driver/3.2.simple_character_device/: Makefile
3.Device_driver/3.2.simple_character_device/src/: simple_character_device.c
3.Device_driver/3.3.GPIO/: ..module-common.o.cmd  .GPIO_control.ko.cmd  .GPIO_control.mod.cmd  .GPIO_control.mod.o.cmd  .GPIO_control.o.cmd  .Module.symvers.cmd  .modules.order.cmd  GPIO_control.c  GPIO_control.ko  GPIO_control.mod  GPIO_control.mod.c  Makefile  README.md  new_GPIO_over_66_kernel_version.c  pwm_driver.c  pwm_driver.h
3.Device_driver/3.5.I2C/: I2C_driver.c  Makefile  i2c_simple.c
3.Device_driver/Application/: Makefile  ioctl_app.c  userspace_test_fops.c
3.Device_driver/Linux/: create_device_file.c  dynamic_allocate_major_minor.c  file_operation.c  helloworld.c  ioctl.c  kthread.c  procfs.c  real_device.c  statically_allocate_major_minor.c
3.Device_driver/SDK/: README.md
4.user_space_application/: create_project.sh
4.user_space_application/1.oled_app/: CMakeLists.txt  README.md  toolchain-rpi4.cmake
4.user_space_application/1.oled_app/config/: README.md
4.user_space_application/1.oled_app/docs/: architecture.md  build_guide.md  driver_guide.md
4.user_space_application/1.oled_app/include/config/: README.md
4.user_space_application/1.oled_app/include/core/: README.md  app.h  game_logic_thread.h  input_thread.h  render_thread.h
4.user_space_application/1.oled_app/include/drivers/: README.md  alphabet_font10.h  alphabet_font16.h  button.h  buzzer.h  pwm_control.h  seven_segment.h  ssd1306.h  ssd1306_data.h
4.user_space_application/1.oled_app/include/utils/: README.md  utils.h
4.user_space_application/1.oled_app/script/: build_script.sh
4.user_space_application/1.oled_app/src/core/: README.md  app.c  game_logic_thread.c  input_thread.c  main.c  render_thread.c
4.user_space_application/1.oled_app/src/drivers/: README.md  alphabet_font10.c  button.c  buzzer.c  pwm_control.c  seven_segment.c  ssd1306.c  ssd1306_data.c
4.user_space_application/1.oled_app/src/utils/: README.md  utils.c
4.user_space_application/1.oled_app/test/: README.md
4.user_space_application/1.oled_app/test/test_HAL/: README.md  test_button.c  test_buzzer.c
4.user_space_application/1.oled_app/test/test_app/: README.md  test_app_func.c
4.user_space_application/1.oled_app/test/test_device_driver/: Makefile  oled_write_pixel.c
4.user_space_application/1.oled_app/test/test_utils/: README.md
4.user_space_application/2.camera_pi4/: CMakeLists.txt  README.md
4.user_space_application/2.camera_pi4/config/: camera_config.h
4.user_space_application/2.camera_pi4/include/drivers/: camera.h
4.user_space_application/2.camera_pi4/include/streaming/: gst_streaming.h
4.user_space_application/2.camera_pi4/src/drivers/: camera.c
4.user_space_application/2.camera_pi4/src/streaming/: gst_streaming.c
4.user_space_application/2.camera_pi4/test/test_camera/: test_camera.c
4.user_space_application/2.camera_pi4/test/test_streaming/: laptop_view.sh  test_streaming.c
